@@ -1,0 +1,1 @@
+battlestar: fwrite /dev/full: No space left on device
