@@ -1,0 +1,4 @@
+r
+r
+take all
+quit
