@@ -1,0 +1,3 @@
+save
+/dev/full
+quit
