@@ -1,0 +1,37 @@
+Version 4.2, fall 1984.
+First Adventure game written by His Lordship, the honorable
+Admiral D.W. Riggle
+
+
+	This is a luxurious stateroom.
+The floor is carpeted with a soft animal fur and the great wooden furniture
+is inlaid with strips of platinum and gold.  Electronic equipment built
+into the walls and ceiling is flashing wildly.  The floor shudders and
+the sounds of dull explosions rumble though the room.  From a window in
+the wall ahead comes a view of darkest space.  There is a small adjoining
+room behind you, and a doorway right.
+
+>-: 
+	These are the executive suites of the battlestar.
+Luxurious staterooms carpeted with crushed velvet and adorned with beaten
+gold open onto this parlor. A wide staircase with ivory banisters leads
+up or down. This parlor leads into a hallway left. The bridal suite is right.
+Other rooms lie ahead and behind you.
+
+>-: 
+	You are in what was once an elegant stateroom.
+Whoever lived in this stateroom, he and his female companion
+were mercilessly slain in their sleep. Clothes, trinkets and personal
+belongings are scattered all across the floor. Through a hole in the
+collapsed floor I can see a hallway below.  A door is behind you.
+
+There is a strange golden amulet on the floor here.
+>-: The amulet is warm to the touch, and its beauty catches your breath.
+A mist falls over your eyes, but then it is gone.  Sounds seem clearer
+and sharper but far away as if in a dream.  The sound of purling water reaches
+you from afar.  The mist falls again, and your heart leaps in horror.  The gold
+freezes your hands and fathomless darkness engulfs your soul.
+amulet:
+Taken.
+>-: bye.
+Your rating was novice.
